-*- outline -*-

This file documents user visible changes between versions of StumpWM

* Changes since 0.9.5
** new commands refresh and redisplay

** new command list-window-properties

** AltGr works

** new top/root keymaps
The *root-map* keymap and *top-map* have been split into several based
on what group it applies to, tiling, floating, both.

** new floating group
StumpWM now has a floating window group mode.

* Changes since 0.9.4.1
** new module, aumix.lisp

** new command, repack-window-numbers

** new module, productivity.lisp

** _NET_FRAME_EXTENTS property is set on client windows

** define-key acts like undefine-key when nil is passed as the command

** new command, show-window-properties 

** select-from-menu lets you type regex to match an item

** new commands, gnext-with-window and gprev-with-window

** run-or-raise now cycles through matching windows

** new function add-screen-mode-line-formatter

** new module wifi.lisp

** new module battery-portable.lisp
>>>>>>> master:NEWS

** new command load-module

** added install/uninstall Makefile rules

** added info command

** added g{next,prev}-with-window commands

** added show-window-properties command

* Changes since 0.9.3
** new %interactivep% variable
see defcommand in the manual.

** The default package is now stumpwm-user
stumpwm-user imports all exported stumpwm symbols.

** the pixmap error plaguing some users has been fixed
If you are running sbcl, you need do nothing. If you're using clisp,
ensure the version is 2.46 or later.

** New macro defprogram-shortcut

* Changes since 0.9.2
** C-t <n> bindings moved to C-t C-<n>
To pull a window by number you now have to hold down Control. Just
pressing the number now selects the window by number in its frame.

** new commands modifiers and copy-last-message

** new command grouplist and binding C-t g "

** New keybinding C-t h c
bound to describe-command

** spelling mistake fixed